# gfwdns

./: .gitignore  Cargo.toml  README.md  upx.sh
.github/workflows/: build.yml
scripts/: duplicate-deps.txt
src/: cache.rs  db.rs  detector.rs  forwarder.rs  lib.rs
src/data/: gfwlist2domains.py  helper.rs  inside_dns.rs  inside_domains.rs  inside_domains.txt  inside_ips.rs  inside_ips.txt  ip2b63.py  ip2bin.py  mod.rs  outside_dns.rs  outside_domains.rs  outside_domains.txt  outside_ips.rs  outside_ips.txt  test.rs  update-inside-domains.sh  update-inside-ips.sh  update-ips.sh  update-outside-domains.sh  update-outside-ips.sh
src/ip/: helper.rs  inside_ips.rs  ip2b63.py  mod.rs  outside_ips.rs  test.rs  update-inside-domains.sh  update-inside-ips.sh  update-outside-ips.sh
