[package]
name = "gfwdns"
version = "0.1.1-beta"
edition = "2021"
description = "gfwdns is a DNS traffic diverter for provide local CDN-friendly results while avoiding DNS pollution by GFW."
license = "GPL-3.0"
authors = ["Delta4 <delta4chat@gmx.com>"]
repository = "https://github.com/delta4chat/gfwdns"

[features]
default=["sqlite"]
sqlite=["dep:sqlx"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "4.5.39", features = ["derive"] }
directories = "5.0.1"
env_logger = "0.11.8"
fastrand = "2.3.0"
hickory-proto = { version = "0.24.4", default-features = false }
log = "0.4.27"
once_cell = { version = "1.21.3", features = ["parking_lot", "portable-atomic"] }
portable-atomic = "1.11.0"
postcard = { version = "1.1.1", features = ["use-std"] }
scc = "2.3.4"
serde = { version = "1.0.219", features = ["derive", "std", "alloc", "rc"] }

smolscale2 = "0.6.0"
smoltimeout = "0.6.2"

async-net = "2.0.0"
futures-lite = "2.6.0"

async-io = "2.4.1"
async-channel = "2.3.1"

sqlx = { optional = true, version = "0.8.6", features = ["runtime-async-std", "sqlite"], default-features = false }

[profile.dev]
panic = "unwind"
opt-level = 2
lto = "off"
#strip = "none"
codegen-units = 256
overflow-checks = true
debug-assertions = true
debug = "limited"
incremental = true

[profile.mydev]
inherits = "dev"
panic = "unwind"
opt-level = 0
lto = "off"
#strip = "none"
codegen-units = 1024
overflow-checks = true
debug-assertions = true
debug = "full"
incremental = false

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
strip = true
codegen-units = 1
overflow-checks = true
debug-assertions = false
debug = 1
incremental = false

